force-app/main/default/objects/Course_Review__c/fields/Given_By__c.field-meta.xml
<CustomField>
    <fullName>Given_By__c</fullName>
    <label>Given By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Reviews</relationshipLabel>
    <relationshipName>Course_Reviews</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>