force-app/main/default/objects/Course_Review__c/fields/Review_For__c.field-meta.xml
<CustomField>
    <fullName>Review_For__c</fullName>
    <label>Review For</label>
    <referenceTo>Course_Master__c</referenceTo>
    <relationshipLabel>Course Reviews</relationshipLabel>
    <relationshipName>Course_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>