force-app/main/default/objects/Course_Review__c/listViews/Course_Review_Rec.listView-meta.xml
<ListView>
    <fullName>Course_Review_Rec</fullName>
    <columns>NAME</columns>
    <columns>Given_By__c</columns>
    <columns>Rating__c</columns>
    <columns>Review_For__c</columns>
    <filterScope>Everything</filterScope>
    <label>Course Review Rec</label>
</ListView>